# fastapi_learn_v2

./: FASTAPI_SETUP.md  README.md  pyproject.toml
app/: database.py  main.py
app/models/: task.py  user.py
app/routers/: auth.py
app/schemas/: user_schema.py
app/utils/: jwt_handler.py
