[project]
name = "fastapi-learn-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.31",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
